--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,6 @@
 <h1>{{pageTitle}} love with hbs</h1>
 <p><a href="/">Home</a></p>
 <p><a href="/about">About</a></p>
+<p><a href="/projects">Projects</a></p>
+
 </header>
