--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Website</title>
+	<title>About Page</title>
 </head>
 <body>
-  {{> header}}
-  <p>{{screamIt welcomeMessage}}</p>
+   {{> header}}
+  <p>Project page text would go here</p>
 
   {{> footer}}
 </body>
